--- a/src/Views/layouts/main.hbs
+++ b/src/Views/layouts/main.hbs
@@ -1,14 +1,19 @@
-<!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    
-    {{{ body }}}
+    <link
+      rel="stylesheet"
+      href="https://bootswatch.com/5/litera/bootstrap.min.css"
+    />
+  </head>
+  <body>
 
-</body>
+    <div class="container">
+      {{{body}}}
+    </div>
+
+  </body>
 </html>
