--- a/src/Views/pages/cms/add.hbs
+++ b/src/Views/pages/cms/add.hbs
@@ -1,5 +1,65 @@
-<form action="/cms/add/categoria" method="post">
-    <label>Categoria</label>
-    <input type="text" name="nombre_categoria">
-    <button type="submit">Agregar</button>
-</form>
+<div class="d-flex align-items-start justify-content-between">
+  <div class="card col-sm-6 px-4 py-2">
+    <form action="/cms/add/libro" method="post">
+      <legend>Libro</legend>
+      <fieldset>
+        <div class="form-group">
+          <label class="form-label">Tituto</label>
+          <input type="text" name="titulo_libro" class="form-control" />
+        </div>
+        <div class="form-group">
+          <label class="form-label">Autor</label>
+          <input type="text" name="autor_libro" class="form-control" />
+        </div>
+        <div class="form-group">
+          <label class="form-label">Edicion</label>
+          <input type="text" name="edicion_libro" class="form-control" maxlength="5"/>
+        </div>
+        <div class="form-group">
+          <label class="form-label">Año</label>
+          <input type="text" name="anio_libro" class="form-control" maxlength="4"/>
+        </div>
+        <div class="form-group">
+          <label class="form-label">Editorial</label>
+          <input type="text" name="editorial_libro" class="form-control" />
+        </div>
+        <div class="form-group">
+          <label class="form-label">Pais</label>
+          <input type="text" name="pais_libro" class="form-control" />
+        </div>
+        <div class="form-group">
+          <label class="form-label">URL para imagen</label>
+          <input type="text" name="foto_libro" class="form-control" />
+        </div>
+        <div class="form-group">
+          <label class="form-label">Categoria</label>
+          <select class="form-select" name="categoria_libro">
+            <option value="" selected>Seleccionar...</option>
+            {{#each Categorias}}
+              <option value={{id}}>{{nombre_categoria}}</option>
+            {{/each}}
+          </select>
+        </div>
+        <button type="submit" class="btn btn-primary mt-2">Agregar</button>
+      </fieldset>
+    </form>
+  </div>
+
+  <div class="card col-sm-4 px-4 py-2">
+    <form action="/cms/add/categoria" method="post">
+      <legend>Categoria</legend>
+      <fieldset>
+        <div class="form-group">
+          <label class="form-label">Nombre de la categoria</label>
+          <input
+            type="text"
+            name="nombre_categoria"
+            class="form-control"
+            placeholder="Terror"
+          />
+        </div>
+        <button type="submit" class="btn btn-primary mt-2">Agregar</button>
+      </fieldset>
+    </form>
+  </div>
+</div>
