--- a/src/Views/partials/all.hbs
+++ b/src/Views/partials/all.hbs
@@ -13,6 +13,7 @@
         <input type="hidden" name="_method" value="delete" />
         <button type="submit" class="btn btn-danger">Delete</button>
       </form>
+      <a href="/cms/edit/{{id}}">Update</a>
     </div>
 
   </div>
