--- a/src/Views/layouts/cms.hbs
+++ b/src/Views/layouts/cms.hbs
@@ -6,37 +6,44 @@
     <title>Document</title>
     <link
       rel="stylesheet"
-      href="https://bootswatch.com/5/litera/bootstrap.min.css"
+      href="https://bootswatch.com/5/lux/bootstrap.min.css"
     />
   </head>
   <body>
 
-    <nav class="navbar navbar-light bg-primary">
-      <a href="" class="navbar-brand">Gestor</a>
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-toggle="collapse"
-        data-target="#navbarNav"
-      >
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a href="/cms" class="nav-link">Inicio</a>
-          </li>
-          <li class="nav-item">
-            <a href="/cms/add" class="nav-link">Agregar...</a>
-          </li>
-          <li class="nav-item">
-            <a href="/" class="nav-link">Principal</a>
-          </li>
-        </ul>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="/">Catalogo</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarColor01"
+          aria-controls="navbarColor01"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarColor01">
+          <ul class="navbar-nav me-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="/cms">Inicio
+                <span class="visually-hidden">(current)</span>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/cms/add">Agregar</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/cms/logout">Cerrar sesión</a>
+            </li>
+          </ul>
+        </div>
       </div>
     </nav>
 
-    <div class="container">
+    <div class="container p-2">
       {{{body}}}
     </div>
 
