--- a/src/Views/layouts/cms.hbs
+++ b/src/Views/layouts/cms.hbs
@@ -11,14 +11,14 @@
   </head>
   <body>
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary py-2">
       <div class="container-fluid">
         <a class="navbar-brand" href="/">Catalogo</a>
         <button
           class="navbar-toggler"
           type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarColor01"
+          data-toggle="collapse"
+          data-target="#navbarColor01"
           aria-controls="navbarColor01"
           aria-expanded="false"
           aria-label="Toggle navigation"
@@ -36,7 +36,7 @@
               <a class="nav-link" href="/cms/add">Agregar</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/cms/logout">Cerrar sesión</a>
+              <a class="nav-link" href="/auth/cms/logout">Cerrar sesión</a>
             </li>
           </ul>
         </div>
