--- a/src/Views/pages/cms/add.hbs
+++ b/src/Views/pages/cms/add.hbs
@@ -1,42 +1,42 @@
 <div class="d-flex align-items-start justify-content-between">
   <div class="card col-sm-6 px-4 py-2">
-    <form action="/cms/add/libro" method="post">
+    <form action="/cms/add/book" method="post">
       <legend>Libro</legend>
       <fieldset>
         <div class="form-group">
           <label class="form-label">Tituto</label>
-          <input type="text" name="titulo_libro" class="form-control" />
+          <input type="text" name="titleForm" class="form-control" />
         </div>
         <div class="form-group">
           <label class="form-label">Autor</label>
-          <input type="text" name="autor_libro" class="form-control" />
+          <input type="text" name="authorForm" class="form-control" />
         </div>
         <div class="form-group">
           <label class="form-label">Edicion</label>
-          <input type="text" name="edicion_libro" class="form-control" maxlength="5"/>
+          <input type="text" name="editionForm" class="form-control" maxlength="5"/>
         </div>
         <div class="form-group">
           <label class="form-label">Año</label>
-          <input type="text" name="anio_libro" class="form-control" maxlength="4"/>
+          <input type="text" name="yearForm" class="form-control" maxlength="4"/>
         </div>
         <div class="form-group">
           <label class="form-label">Editorial</label>
-          <input type="text" name="editorial_libro" class="form-control" />
+          <input type="text" name="editorialForm" class="form-control" />
         </div>
         <div class="form-group">
           <label class="form-label">Pais</label>
-          <input type="text" name="pais_libro" class="form-control" />
+          <input type="text" name="countryForm" class="form-control" />
         </div>
         <div class="form-group">
           <label class="form-label">URL para imagen</label>
-          <input type="text" name="foto_libro" class="form-control" />
+          <input type="text" name="photoForm" class="form-control" />
         </div>
         <div class="form-group">
           <label class="form-label">Categoria</label>
-          <select class="form-select" name="categoria_libro">
+          <select class="form-select" name="categoryForm">
             <option value="" selected>Seleccionar...</option>
-            {{#each Categorias}}
-              <option value={{id}}>{{nombre_categoria}}</option>
+            {{#each Categories}}
+              <option value={{id}}>{{categoryName}}</option>
             {{/each}}
           </select>
         </div>
@@ -46,14 +46,14 @@
   </div>
 
   <div class="card col-sm-4 px-4 py-2">
-    <form action="/cms/add/categoria" method="post">
+    <form action="/cms/add/category" method="post">
       <legend>Categoria</legend>
       <fieldset>
         <div class="form-group">
           <label class="form-label">Nombre de la categoria</label>
           <input
             type="text"
-            name="nombre_categoria"
+            name="categoryNameForm"
             class="form-control"
             placeholder="Terror"
           />
