--- a/src/Views/pages/cms/edit.hbs
+++ b/src/Views/pages/cms/edit.hbs
@@ -1,41 +1,41 @@
 <div class="d-flex align-items-start justify-content-between">
   <div class="card col-sm-6 px-4 py-2">
-    <form action="/cms/edit/{{Libro.id}}?_method=put" method="post">
+    <form action="/cms/edit/{{Book.id}}?_method=put" method="post">
       <legend>Libro</legend>
       <fieldset>
         <div class="form-group">
           <label class="form-label">Tituto</label>
-          <input type="text" name="titulo_libro" class="form-control" value="{{Libro.titulo}}" />
+          <input type="text" name="titleForm" class="form-control" value="{{Book.title}}" />
         </div>
         <div class="form-group">
           <label class="form-label">Autor</label>
-          <input type="text" name="autor_libro" class="form-control" value="{{Libro.autor}}"/>
+          <input type="text" name="authorForm" class="form-control" value="{{Book.author}}"/>
         </div>
         <div class="form-group">
           <label class="form-label">Edicion</label>
-          <input type="text" name="edicion_libro" class="form-control" maxlength="5" value="{{Libro.edicion}}"/>
+          <input type="text" name="editionForm" class="form-control" maxlength="5" value="{{Book.edition}}"/>
         </div>
         <div class="form-group">
           <label class="form-label">Año</label>
-          <input type="text" name="anio_libro" class="form-control" maxlength="4" value="{{Libro.anio}}"/>
+          <input type="text" name="yearForm" class="form-control" maxlength="4" value="{{Book.year}}"/>
         </div>
         <div class="form-group">
           <label class="form-label">Editorial</label>
-          <input type="text" name="editorial_libro" class="form-control" value="{{Libro.editorial}}"/>
+          <input type="text" name="editorialForm" class="form-control" value="{{Book.editorial}}"/>
         </div>
         <div class="form-group">
           <label class="form-label">Pais</label>
-          <input type="text" name="pais_libro" class="form-control" value="{{Libro.pais}}"/>
+          <input type="text" name="countryForm" class="form-control" value="{{Book.country}}"/>
         </div>
         <div class="form-group">
           <label class="form-label">URL para imagen</label>
-          <input type="text" name="foto_libro" class="form-control" value="{{Libro.foto_link}}"/>
+          <input type="text" name="photoForm" class="form-control" value="{{Book.photoUrl}}"/>
         </div>
         <div class="form-group">
           <label class="form-label">Categoria</label>
-          <select class="form-select" name="categoria_libro">
-            {{#each Categorias}}
-              <option value={{id}}>{{nombre_categoria}}</option>
+          <select class="form-select" name="categoryForm">
+            {{#each Categories}}
+              <option value={{id}}>{{categoryName}}</option>
             {{/each}}
           </select>
         </div>
