minor changes in views and api

--- a/src/Views/layouts/cms.auth.hbs
+++ b/src/Views/layouts/cms.auth.hbs
@@ -1,32 +1,31 @@
-<!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link
       rel="stylesheet"
       href="https://bootswatch.com/5/lux/bootstrap.min.css"
     />
-</head>
-<body>
-    <div class="navbar navbar-expand-lg navbar-dark bg-primary py-0">
-        <div class="container-fluid">
-            <a href="/" class="navbar-brand">Catalogo</a>
-        </div>
+  </head>
+  <body>
+    <div class="navbar navbar-expand-lg navbar-dark bg-primary py-2">
+      <div class="container-fluid">
+        <a href="/" class="navbar-brand">Catalogo</a>
         <ul class="navbar-nav me-auto">
-            <li class="nav-item">
-                <a href="/auth/cms/login" class="nav-link">Sign In</a>
-            </li>
-            <li class="nav-item">
-                <a href="/auth/cms/register" class="nav-link">Sign Up</a>
-            </li>
+          <li class="nav-item">
+            <a href="/auth/cms/login" class="nav-link">Sign In</a>
+          </li>
+          <li class="nav-item">
+            <a href="/auth/cms/register" class="nav-link">Sign Up</a>
+          </li>
         </ul>
+      </div>
     </div>
 
     <div class="container p-2">
-        {{{body}}}
+      {{{body}}}
     </div>
-</body>
+  </body>
 </html>
