--- a/src/Views/pages/home/home.hbs
+++ b/src/Views/pages/home/home.hbs
@@ -1,1 +1,9 @@
-prueba 1
+<div class="jumbotron m-auto">
+  <h1 class="display-4">Hi!</h1>
+  <p class="lead">This is my first project suitable for deployment as we can see</p>
+  <hr class="my-4">
+  <p class="lead">The project has instructions to consume an API, a management panel that only I have access to, and these main views for users</p>
+  <p class="lead">
+    <a class="btn btn-primary btn-lg" href="/about" role="button">Learn more</a>
+  </p>
+</div>
