--- a/src/Views/layouts/cms.hbs
+++ b/src/Views/layouts/cms.hbs
@@ -14,32 +14,19 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary py-2">
       <div class="container-fluid">
         <a class="navbar-brand" href="/">Catalogo</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-toggle="collapse"
-          data-target="#navbarColor01"
-          aria-controls="navbarColor01"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarColor01">
-          <ul class="navbar-nav me-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="/cms">Inicio
-                <span class="visually-hidden">(current)</span>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/cms/add">Agregar</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/auth/cms/logout">Cerrar sesión</a>
-            </li>
-          </ul>
-        </div>
+        <ul class="navbar-nav me-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="/cms">Inicio
+              <span class="visually-hidden">(current)</span>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/cms/add">Agregar</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/auth/cms/signout">Cerrar sesión</a>
+          </li>
+        </ul>
       </div>
     </nav>
 
