--- a/src/Views/layouts/main.hbs
+++ b/src/Views/layouts/main.hbs
@@ -9,9 +9,26 @@
       href="https://bootswatch.com/5/litera/bootstrap.min.css"
     />
   </head>
-  <body>
+  <body style="height: 100vh;">
 
-    <div class="container">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary py-2">
+      <div class="container-fluid">
+        <a href="/" class="navbar-brand">Book Catalog</a>
+        <ul class="navbar-nav me-auto">
+          <li class="nav-item">
+            <a href="" class="nav-link">Home</a>
+          </li>
+          <li class="nav-item">
+            <a href="" class="nav-link">Api</a>
+          </li>
+          <li class="nav-item">
+            <a href="" class="nav-link">About</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+
+    <div class="container mt-4">
       {{{body}}}
     </div>
 
