rework in views and 404 view

--- a/src/Views/pages/cms/auth/signin.hbs
+++ b/src/Views/pages/cms/auth/signin.hbs
@@ -1,5 +1,8 @@
-<form action="/auth/cms/signin" method="post">
-    <input type="email" name="emailSignin" id="">
-    <input type="password" name="passwordSignin" id="">
-    <button type="submit">Enviar</button>
-</form>
+<main class="form-sign w-50 m-auto">
+  <form action="/auth/cms/signin" method="post">
+    <h1>Inicio de sesión</h1>
+    <input type="email" name="emailSignin" class="form-control my-2" placeholder="Email" />
+    <input type="password" name="passwordSignin" class="form-control my-2" placeholder="Contraseña" />
+    <button type="submit" class="btn btn-primary my-2">Iniciar sesión</button>
+  </form>
+</main>
