--- a/src/Views/pages/home/home.hbs
+++ b/src/Views/pages/home/home.hbs
@@ -1,9 +1,9 @@
 <div class="jumbotron m-auto">
-  <h1 class="display-4">Hi!</h1>
-  <p class="lead">This is my first project suitable for deployment as we can see</p>
+  <h1 class="display-4">Hola!</h1>
+  <p class="lead">Este es mi primer proyecto desplegado.</p>
   <hr class="my-4">
-  <p class="lead">The project has instructions to consume an API, a management panel that only I have access to, and these main views for users</p>
+  <p class="lead">Cuenta con estas vistas principales, un API sencilla y un panel de administración desde donde se añaden elementos.</p>
   <p class="lead">
-    <a class="btn btn-primary btn-lg" href="/about" role="button">Learn more</a>
+    <a class="btn btn-primary" href="/about" role="button">Leer mas</a>
   </p>
 </div>
