--- a/src/Views/pages/cms/auth/signup.hbs
+++ b/src/Views/pages/cms/auth/signup.hbs
@@ -1,11 +1,10 @@
-<form action="/auth/cms/signup" method="post">
-<label for="usernameSignup">Nombre de usuario</label>
-    <input type="text" name="usernameSignup">
-    <label for="emailSignup">Email</label>
-    <input type="email" name="emailSignup" id="">
-    <label for="passwordSignup">Contraseña</label>
-    <input type="password" name="passwordSignup" id="">
-    <label for="isSecret">Texto de seguridad</label>
-    <input type="password" name="isSecret">
-    <button type="submit">Registrar</button>
-</form>
+<main class="form-sign w-50 m-auto">
+  <form action="/auth/cms/signup" method="post">
+    <h1>Registrar usuario</h1>
+    <input type="text" name="usernameSignup" class="form-control my-2" placeholder="Nombre de usuario"/>
+    <input type="email" name="emailSignup" class="form-control my-2" placeholder="Email"/>
+    <input type="password" name="passwordSignup" class="form-control my-2" placeholder="Contraseña"/>
+    <input type="password" name="isSecret" class="form-control my-2"/>
+    <button type="submit" class="btn btn-primary my-2">Registrar</button>
+  </form>
+</main>
